# testkit-stub

./: .travis.yml  CMakeLists.txt  README.md  mingw_cross_toolchain.cmake  ostro_toolchain.cmake
CommandLineBuild/: makefile
android/: AndroidManifest.xml  build.gradle
android/jni/: Android.mk  Android_non_PIE.mk  Application.mk
android/res/layout/: testkitstub_activity_layout.xml
android/src/testkit/stub/: Constants.java  TestkitStub.java  TestkitStubService.java
include/: CMakeLists.txt  comfun.h  httpserver.h  testcase.h
include/json/: CMakeLists.txt
source/: CMakeLists.txt  comfun.cpp  httpserver.cpp  testcase.cpp
source/json/: CMakeLists.txt  LICENSE  json_batchallocator.h  json_reader.cpp  json_value.cpp  json_writer.cpp
source/main/: CMakeLists.txt  main.cpp
source/ut/: CMakeLists.txt  ut.cpp
tools/: install_android_ndk.sh  install_ostro_sdk.sh  prepare_pthread.sh
windows/stub/powershell/: download.ps1  exitcode.ps1  stub_demon.ps1  uninstall.ps1
